<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/digit_buttons"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_digit_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_3"
        app:layout_constraintBottom_toTopOf="@+id/button_digit_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_digit_2"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button_digit_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_2"
        app:layout_constraintBottom_toTopOf="@+id/button_digit_5"
        app:layout_constraintEnd_toStartOf="@+id/button_digit_3"
        app:layout_constraintStart_toEndOf="@+id/button_digit_1"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button_digit_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_1"
        app:layout_constraintBottom_toTopOf="@+id/button_digit_4"
        app:layout_constraintEnd_toStartOf="@+id/button_digit_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_digit_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_6"
        app:layout_constraintBottom_toTopOf="@+id/button_digit_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_digit_5"
        app:layout_constraintTop_toBottomOf="@id/button_digit_3" />

    <Button
        android:id="@+id/button_digit_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_5"
        app:layout_constraintBottom_toTopOf="@+id/button_digit_8"
        app:layout_constraintEnd_toStartOf="@+id/button_digit_6"
        app:layout_constraintStart_toEndOf="@+id/button_digit_4"
        app:layout_constraintTop_toBottomOf="@+id/button_digit_2" />

    <Button
        android:id="@+id/button_digit_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_4"
        android:textSize="@dimen/digits_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_digit_7"
        app:layout_constraintEnd_toStartOf="@id/button_digit_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_digit_1" />


    <Button
        android:id="@+id/button_digit_9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_9"
        android:textSize="@dimen/digits_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_delete_char"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_digit_8"
        app:layout_constraintTop_toBottomOf="@+id/button_digit_6" />


    <Button
        android:id="@+id/button_digit_8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_8"
        android:textSize="@dimen/digits_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_digit_0"
        app:layout_constraintEnd_toStartOf="@id/button_digit_9"
        app:layout_constraintStart_toEndOf="@+id/button_digit_7"
        app:layout_constraintTop_toBottomOf="@+id/button_digit_5" />


    <Button
        android:id="@+id/button_digit_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_7"
        android:textSize="@dimen/digits_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_place_holder"
        app:layout_constraintEnd_toStartOf="@+id/button_digit_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_digit_4" />

    <Button
        android:id="@+id/button_delete_char"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_delete_last_character"
        android:textSize="@dimen/digits_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_digit_0"
        app:layout_constraintTop_toBottomOf="@+id/button_digit_9" />


    <Button
        android:id="@+id/button_place_holder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="false"
        android:textSize="@dimen/digits_text_size"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_digit_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_digit_7" />

    <Button
        android:id="@+id/button_digit_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_0"
        android:textSize="@dimen/digits_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_delete_char"
        app:layout_constraintStart_toEndOf="@+id/button_place_holder"
        app:layout_constraintTop_toBottomOf="@id/button_digit_8" />

</androidx.constraintlayout.widget.ConstraintLayout>