<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <TextView
        android:id="@+id/text_view_licence1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/next_text_view_padding"
        android:paddingEnd="@dimen/next_text_view_padding"
        android:text="@string/text_view_licence_text_1"
        android:textColor="@color/jobim_english_text_color"
        android:textSize="@dimen/next_text_view_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_view_show_licence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/next_text_view_padding"
        android:text="@string/text_view_licence_text_2"
        android:textColor="@color/jobim_english_text_color"
        android:textSize="@dimen/next_text_view_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_licence1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/next_text_view_padding"
        android:text="@string/text_view_next_text"
        android:textColor="@color/jobim_english_text_color"
        android:textSize="@dimen/next_text_view_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include layout="@layout/jobim_english_layout" />

    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/registration_rational_horizontal_margins"
        android:layout_marginEnd="@dimen/registration_rational_horizontal_margins"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.625">

        <TextView
            android:id="@+id/text_view_registration_rational_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cornered_up_view"
            android:paddingTop="@dimen/registration_rational_msg_horizontal_padding"
            android:text="@string/registration_rational_msg"
            android:textAlignment="center"
            android:textSize="@dimen/registration_rational_msg_text_size" />

        <TextView
            android:id="@+id/text_view_registration_rational_sub_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cornered_down_view"
            android:paddingBottom="@dimen/registration_rational_msg_horizontal_padding"
            android:text="@string/registration_rational_sub_msg"
            android:textAlignment="center"
            android:textSize="@dimen/registration_rational_msg_text_size" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_app_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat" />


</androidx.constraintlayout.widget.ConstraintLayout>